--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,4 @@ license = {text = "MIT"}
 
 [tool.pdm.scripts]
 serve = "lektor server"
-
-[build-system]
-requires = ["pdm-pep517>=1.0.0"]
-build-backend = "pdm.pep517.api"
+build = "lektor build"
