--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - uses: actions/setup-pdm@v3
+      - uses: pdm-project/setup-pdm@v3
         with:
           python-version: '3.10'
           cache: true
