--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,3 +58,4 @@ jobs:
         with:
           github_token: ${{ secrets.GH_TOKEN }}
           branch: master
+          repository: PyConChina/PyConChina.github.io
