--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,17 +1,14 @@
 name: "Deploy Website"
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
-    paths:
-      - ".github/**"
-      - "assets/**"
-      - "content/**"
-      - "databags/**"
-      - "models/**"
-      - "templates/**"
-
+    paths-ignore:
+      - "README.md"
+      - "LICENSE"
+      - "**/.gitignore"
 jobs:
   build:
     runs-on: ubuntu-latest
