--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,7 @@ jobs:
         run: pdm install
 
       - name: Build
-        run: pdm build_static
+        run: pdm run build
       - uses: actions/upload-artifact@v3
         with:
           name: website
