chore: specify plugins as dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,8 @@ authors = [
 ]
 dependencies = [
     "lektor>=3.4.0b3",
+    "lektor-minify>=1.2",
+    "lektor-tailwind>=0.1.1",
 ]
 requires-python = ">=3.9"
 license = {text = "MIT"}
@@ -12,3 +14,4 @@ license = {text = "MIT"}
 serve = "lektor server"
 build = "lektor build -f minify"
 start = "python -m http.server -d _build"
+clean = "lektor clean --yes"
