feat: update activity url

--- a/models/city.ini
+++ b/models/city.ini
@@ -18,6 +18,10 @@ type = string
 label = Activity URL
 type = url
 
+[fields.live_url]
+label = Live URL
+type = url
+
 [children]
 model = talk
 order_by = start_date
