--- a/models/talk.ini
+++ b/models/talk.ini
@@ -1,7 +1,14 @@
 [model]
 name = Talk
 label = {{this.speaker}}: {{this.title}}
-inherits = page
+
+[fields.title]
+label = Title
+type = string
+
+[fields.body]
+label = Body
+type = markdown
 
 [fields.speaker]
 label = Speaker
